<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CuentaUsuario">

    <LinearLayout
        android:id="@+id/linear_registrar_vehiculo_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6D6A6464"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar_registrar_vehiculo"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:max="100"
            android:minHeight="80dp"
            android:progress="0" />
    </LinearLayout>

    <include
        layout="@layout/barra_herramientas"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </include>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barra_herramientas">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="10dp">

            <TextView
                android:id="@+id/tV_cuenta_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/cuenta_titulo"
                android:textColor="@color/dark_primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgView_cuenta_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description"
                android:maxHeight="120dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/icono_perfil" />

            <EditText
                android:id="@+id/et_cuenta_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/et_cuenta_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/registro_apellidos" />

            <EditText
                android:id="@+id/et_cuenta_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:text="@string/registro_telefono" />

            <EditText
                android:id="@+id/et_cuenta_calle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/registro_calle" />

            <EditText
                android:id="@+id/et_cuenta_colonia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/registro_colonia" />

            <EditText
                android:id="@+id/et_cuenta_codigo_postal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:text="@string/registro_codigo_postal" />

            <EditText
                android:id="@+id/et_cuenta_localidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/registro_localidad" />

            <EditText
                android:id="@+id/et_cuenta_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/email" />

            <EditText
                android:id="@+id/et_cuenta_contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/password" />

            <Button
                android:id="@+id/btn_cuenta_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#147721"
                android:text="@string/btn_guardar_cambios"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>