<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tV_recuperaContra_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/titulo_recuperaContra"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tV_recuperaContra_instrucciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/recuperaContra_instrucciones"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_recuperaContra_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btn_recuperaContra_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/dark_primary"
        android:text="@string/recuperaContra_btnEnviar"
        android:textColor="@color/white"
        android:textStyle="bold" />

    </LinearLayout>
