<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageBtn_main_cuenta"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:adjustViewBounds="false"
                        android:background="@drawable/btn_cuenta"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/btn_cuenta" />

                    <TextView
                        android:id="@+id/tV_main_cuenta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cuenta"
                        android:textColor="@color/dark_primary"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageBtn_main_vehiculos"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:adjustViewBounds="false"
                        android:background="@drawable/btn_vehiculos"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/btn_vehiculos" />

                    <TextView
                        android:id="@+id/tV_main_registros"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Vehiculos"
                        android:textColor="@color/dark_primary"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageBtn_main_registros"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:adjustViewBounds="false"
                        android:background="@drawable/btn_registros"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/btn_registros" />

                    <TextView
                        android:id="@+id/tV_main_reservar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registros"
                        android:textColor="@color/dark_primary"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageBtn_main_cerrar_sesion"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:adjustViewBounds="false"
                        android:background="@drawable/btn_cerrar_sesion"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/btn_cerrar_sesion" />

                    <TextView
                        android:id="@+id/tV_main_cerrar_sesion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cerrar_sesion"
                        android:textColor="@color/dark_primary"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>